# CFEDemands

./: .gitignore  .gitmodules  AGENTS.md  MANIFEST.in  Makefile  README.org  README.txt  __init__.py  bitbucket-pipelines.yml  df_utils.py  econometric_model_incomplete_OLSsimple.tex  engel_curves.py  indian_wpi.py  lbda.py  neediness.org  neediness.py  neediness.py~  pyproject.toml  root_with_precision.py  setup.cfg  setup.py  subsistence.org  svd_missing.py  svd_rank1_approximation_with_missing_data_test.py  tangle.sh  test.py  test_get_loglambdas.py  uganda_data.org  variable_elasticity_utility.py  ves_estimation.py
Computation/: monotone_function_solver.org
Demands/: demands.org  engel_curves.org  monotone_function_solver.org
Empirics/: cfe_estimation.org  cfe_estimation.org_archive  neediness.org  neediness.org_archive  regression.org  result.org
Empirics/archive/: cfe_estimation.org_archive  regression.org_archive  small.org
Files/: input_files.org
arellano_robust_cov_issue/: issue_example.py
cfe/: __init__.py  requirements.txt
cfe/estimation/: __init__.py
cfe/stochastic_test/: README.txt  test_artificial_data.py  test_df_norm.py  test_drop_columns_wo_cov.py  test_drop_useless_expenditures.py  test_elasticities_equal.py  test_estimate_with_missing.py  test_get_loglambdas.py  test_interactive_fixed_effects.py  test_merge_multi.py  test_ols_cov.py  test_svd_rank1_approximation_with_missing_data_example.py
cfe/test/: README.txt  artificial_data.py  estimate_with_missing.py  svd_rank1_approximation_with_missing_data_example.py  svd_rank1_approximation_with_missing_data_test.py  test.py  test_get_loglambdas.py
cfe/utility/: cfe_utility.py  root_with_precision.py
cfe/utility/Computation/: variable_elasticity_utility.py
