[tool.poetry]
name = "CFEDemands"
version = "0.8.0"
description = "Tools for estimating and computing Constant Frisch Elasticity (CFE) demands."
authors = ["Ethan Ligon <ligon@berkeley.edu>"]
license = "CC-BY-NC-SA-4.0"
readme = "README.org"
repository = "https://github.com/ligon/CFEDemands"
packages = [{include = "cfe"}]

[tool.poetry.dependencies]
python = "^3.9"
ConsumerDemands = ">=0.3.dev0"
matplotlib = ">=3.5.1"
numpy = ">=1.21.5"
pandas = ">=1.3.5"
scipy = ">=1.7.3"
importlib-metadata = ">=6.7.0"
fsspec = "*"
xarray = "*"
scikit-learn = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[tool.pytest.ini_options]
testpaths = ["cfe/test"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
