[bdist_wheel]
universal = 1

[metadata]
name = CFEDemands
authors = Ethan Ligon
author_email = ligon@berkeley.edu
description = Tools for estimating and computing Constant Frisch Elasticity (CFE) demands.
license = Creative Commons Attribution-Noncommercial-ShareAlike 4.0 International license
url = https://github.com/ligon/CFEDemands
long_description = file: README.txt
long_description_content_type = text/plain
license_files = LICENSE.txt
version = file: cfe/VERSION

[options]
zip_safe = True
include_package_data = True
install_requires =
    ConsumerDemands >= 0.3.dev0
    dvc >= 2.10.2
    joblib >= 1.1.0
    matplotlib >= 3.5.1
    numpy >= 1.21.5
    pandas >= 1.3.5
    pytest >= 7.1.1
    ray >= 2.0.0
    scipy >= 1.7.3
    statsmodels >= 0.13.2
    xarray >= 0.20.1
    scikit-learn >= 1.0.2
    xarray >= 0.20.1
    sqlalchemy >= 2.0.31
    importlib_metadata >= 6.7.0

packages = find:


[aliases]
test = pytest

[tool:pytest]
testpaths = cfe/test
    

